--- a/pipelines/incubator/build-deploy-pl.yaml
+++ b/pipelines/incubator/build-deploy-pl.yaml
@@ -14,9 +14,17 @@ spec:
   - name: docker-image
     type: image
   tasks:
+  - name: validate-collection-task
+    taskRef:
+      name: CollectionId-validate-collection-task
+    resources:
+      inputs:
+      - name: git-source
+        resource: git-source
   - name: build-deploy-task
     taskRef:
       name: CollectionId-build-deploy-task
+    runAfter: [validate-collection-task]
     resources:
       inputs:
       - name: git-source
