--- a/pipelines/incubator/build-pl.yaml
+++ b/pipelines/incubator/build-pl.yaml
@@ -10,9 +10,17 @@ spec:
     - name: docker-image
       type: image
   tasks:
+    - name: validate-collection-task
+      taskRef:
+        name: CollectionId-validate-collection-task
+      resources:
+        inputs:
+        - name: git-source
+          resource: git-source
     - name: build-task
       taskRef:
         name: CollectionId-build-task
+      runAfter: [validate-collection-task]
       resources:
         inputs:
         - name: git-source
